# rag-medical-guidelines

./: .agents-cli-spec.md  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  langchain-rag.ipynb  main.py  pyproject.toml  requirements.txt  run_local_eval.py
app/: agent.py  fast_api_app.py
app/app_utils/: a2a.py  services.py  telemetry.py  typing.py
scripts/: build_vector_db.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py  test_server_e2e.py
