[project]
name = "rag-medical-guidelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.9",
    "gitpython>=3.1.50",
    "ipykernel>=6.31.0",
    "langchain>=0.3.30",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "lxml>=6.1.1",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.68.2",
]
